Added logger, showOptions class, login functionality and unit test

--- a/University Portal Workspace/universityportal/src/main/resources/Bundle.properties
+++ b/University Portal Workspace/universityportal/src/main/resources/Bundle.properties
@@ -1,4 +1,7 @@
 # strings
+college_name=ABC College of Engineering
+admin_login=Admin Login!
+student_login=Student Login!
 input_file_not_found_exception=Input file not found! Please verify the path in config.properties file
 invalid_input_exception=Data present in input file is not valid.
 file_read_exception=Error while reading file 
@@ -6,3 +9,9 @@ sql_connection_exception=Couldn't connect to the database, Retry!
 insert_failed_input_exception=Couldn't insert data as it either already exists or is invalid
 update_failed_input_exception=Couldn't update data as it either doesn't exists or is invalid
 delete_failed_input_exception=Couldn't delete data as it either doesn't exists or is invalid
+invalid_option_selected=Invalid option, please select an appropriate option
+student_login_success=Student successfully logged in: 
+admin_login_success=Admin successfully logged in:  
+invalid_credentials_log=Invalid credentials: 
+invalid_credentials_mesage=Invalid credentials!
+backend_error=Error processing the request retry!
