--- a/University Portal Workspace/universityportal/pom.xml
+++ b/University Portal Workspace/universityportal/pom.xml
@@ -18,5 +18,13 @@
 			<artifactId>mysql-connector-java</artifactId>
 			<version>8.0.24</version>
 		</dependency>
+
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.13.2</version>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
+
 </project>
