--- a/University Portal Workspace/universityportal/src/main/resources/Bundle.properties
+++ b/University Portal Workspace/universityportal/src/main/resources/Bundle.properties
@@ -15,3 +15,14 @@ admin_login_success=Admin successfully logged in:
 invalid_credentials_log=Invalid credentials: 
 invalid_credentials_mesage=Invalid credentials!
 backend_error=Error processing the request retry!
+
+
+file_path_error=File is not Present! Please verify the path!
+empty_file_error=Empty File!
+marks_format=Marks ID must be an integer!
+studentid_length=Student ID must be of 11 character!
+studentid_format=Subject ID can only contain numbers!
+semster_range=Semster must be in range 1 - 8!
+subjectid_length=Subject ID must be of 8 character!
+subjectid_format=Format of Subject ID is not correct!
+marks_range=Marks must be in range 1 - 100!
