Added Complete Result
Added the complete result functionality with security

--- a/StudentService/src/main/resources/application.properties
+++ b/StudentService/src/main/resources/application.properties
@@ -14,3 +14,8 @@ server.port=8091
 
 logging.level.com.netflix.eureka=false
 logging.level.com.netflix.discovery=false
+
+
+# Error Messages
+studentService.invalidSemesterMessage = Semester Value is Invalid. Please enter semester value from 1-8
+studentController.credentialsMessage = Incorrect Username or token
