Added Invalid Username Exception

--- a/AuthorizationService/src/main/resources/application.properties
+++ b/AuthorizationService/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 
 #Secret Key To Generate Token
 app.secretKey=@q2Xg7@T4mOplFu#Ae
-app.jwtValidityMinutes=15
+app.jwtValidityMinutes=1500
 
 # Database Properties
 
@@ -17,3 +17,10 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.h2.console.enabled=true
 server.servlet.context-path=/auth
 server.port=8090
+
+
+# Error Messages
+
+jwtUtil.expiredMessage = Token has been expired
+jwtUtil.malformedMessage = Token is in invalid format
+userDetails.errorMessage = User Does Not Exist!
