--- a/AuthorizationService/src/main/resources/application.properties
+++ b/AuthorizationService/src/main/resources/application.properties
@@ -3,6 +3,8 @@
 app.secretKey=@q2Xg7@T4mOplFu#Ae
 app.jwtValidityMinutes=1500
 
+spring.application.name=AUTH-SERVICE
+
 # Database Properties
 
 spring.datasource.url=jdbc:h2:mem:testdb
@@ -24,3 +26,9 @@ server.port=8090
 jwtUtil.expiredMessage = Token has been expired
 jwtUtil.malformedMessage = Token is in invalid format
 userDetails.errorMessage = User Does Not Exist!
+
+
+# Eureka Properties
+eureka.client.enabled=true
+eureka.client.fetch-registry: true
+eureka.client.service-url.defaultZone: http://localhost:8761/eureka/ 
